--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,12 @@
 name = "primo"
 version = "0.1.0"
 authors = ["Baptiste Fontaine <b@ptistefontaine.fr>"]
+description = "Sort a file, correctly handling multi-digits numbers"
+homepage = "https://github.com/bfontaine/primo"
+repository = "https://github.com/bfontaine/primo.git"
+keywords = ["sort", "numbers"]
+categories = ["text-processing", "command-line-utilities"]
+license = "MIT"
 
 [dependencies]
 clap = "~2.19.0"
